src/pages/student/Home/Home.css
.student-home-container {
    display: flex;
    justify-content: center;
    width: 100%;
    position: relative;
    background-color: #f5f5f56c;
}
/* Banner */
.student-banner {
    width: 100%;
    z-index: 1;
}
.banner-img {
    width: 100%;
    height: auto;
}
.banner-content {
    position: absolute;
    left: 7%;
    text-align: left;
    width: 85%;
    display: flex;
    flex-direction: column;
    gap: 10px;
    top: 150px;
}
.banner-title {
    font-size: 50px;
    font-weight: bold;
    margin: 0;
    color: #FE9A3B;
}
.banner-text {
    font-size: 14px;
    margin: 0;
    margin-bottom: 10px;
    color: black;
}
.banner-btn-goal {
    width: fit-content;
    padding: 8px 15px;
    font-size: 10px;
    border-radius: 16px;
    color: #fff;
    background-color: #2AB9E2;
    border: none;
    cursor: pointer;
    box-shadow: 3px 3px 10px #2abae271;
    transition: all 0.3s ease-in-out;
}
.banner-btn-goal:hover {
    transition: all 0.3s ease-in-out;
    transform: scale(1.05);
}
/* End banner */
/* Main content */
.main-student-content-container {
    display: flex;
    justify-content: center;
    width: 100%;
}
.main-student-content {
    margin-top: 85px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
}
.welcome-student {
    width: 85%;
}
.welcome-student-title {
    font-size: 30px;
    font-weight: 600;
}
.welcome-student-text {
    font-size: 16px;
    color: #503A3A;
}
/* End main content */
/* Nav blog */
.nav-blog-student {
    width: 85%;
    margin-top: 60px;
    display: flex;
    justify-content: space-between;
}
.blog-content {
    display: flex;
    justify-content: space-between;
    width: 600px;
    box-shadow: 3px 3px 10px rgba(0,0,0, 0.1);
    padding: 30px;
    height: 200px;
    border-radius: 16px;
}
.goal-blog-right, .pending-task-blog-right {
    width: 95px;
    object-fit: contain;
}
.blog-content-left {
    display: flex;
    flex-direction: column;
    gap: 15px;
}
.blog-content-title {
    display: flex;
    align-items: center;
    gap: 10px;
    font-size: 20px;
    margin-bottom: 5px;
    font-weight: 700;
}
.blog-text-content {
    font-size: 16px;
}
.goal-btn {
    width: fit-content;
    padding: 5px 20px;
    font-size: 10px;
    border-radius: 16px;
    color: #fff;
    background-color: #66C89C;
    border: none;
    cursor: pointer;
    box-shadow: 3px 3px 10px #66c89cb0;
    transition: all 0.3s ease-in-out;
    margin-top: 20px;
}
.goal-btn:hover {
    transition: all 0.3s ease-in-out;
    transform: scale(1.05);
}
.goal-blog {
    background-color: #CDEFDF;
    border-radius: 16px;
    .goal-icon-title, .goal-text-content {
        color: #66C89C;
    }
}
.pending-task-blog {
    background-color: #DCEEFC;
    border-radius: 16px;
    .pending-task-icon-title, .pending-task-text-content {
        color:#429CD4;
    }

}
/* End Nav blog */
/* Achivement */
.student-achievement {
    display: flex;
    align-items: center;
    margin-top: 60px;
    width: 85%;
    background-color: #fff;
    border-radius: 16px;
    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1)
}
.student-achievement-content {
    padding: 30px;
    display: flex;
    flex-direction: column;
    gap: 40px;
    font-size: 25px;
    .student-achievement-title {
        i {
            margin-right: 10px;
        }
    }   
}
.student-achievement-blog {
    width: 100%;
    display: flex;
    justify-content: center;
}
.carousel {
    width: 1250px;
    display: flex;
    justify-content: center;
}
.carousel-inner {
    padding: 15px;
    width: 1150px;
    max-width: 1150px;
}
.student-achievement-blog-content {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 30px;
    width: 90%;
    max-width: 1130px;
}
.achievement-blog {
    display: flex;
    gap: 30px;
    background-color: #FDFDFD;
    border: 1px solid #F0F0F0;
    padding: 30px;
    border-radius: 16px;
    width: 550px;
    .certificate-img {
        width: 230px;
    }
}
.achievement-blog-right {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    .achievement-blog-right-top {
        display: flex;
        flex-direction: column;
        gap: 15px;
        .achievement-blog-right-title {
            font-size: 16px;
            font-weight: bold;
        }
        .achievement-blog-right-text, .semester-subject {
            font-size: 14px;
        }
    }
    .view-certificate-btn {
        width: fit-content;
        padding: 5px 20px;
        font-size: 12px;
        border-radius: 16px;
        color: #fff;
        background-color: #2AB9E2;
        border: none;
        cursor: pointer;
        box-shadow: 3px 3px 10px #2abae271;
        transition: all 0.3s ease-in-out;
    }
    .view-certificate-btn:hover {
        transition: all 0.3s ease-in-out;
        transform: scale(1.05);
    }
}
/* End achivement */
/* Slider */
.custom-carousel-control {
    border: none;
    background-color: white;
}
/* End Slider */
/* Time table */
.time-table {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 85%;
    background-color: white;
    height: 600px;
    margin-top: 60px;
    border-radius: 16px;
    box-shadow: 3px 3px 10px rgba(0,0,0, 0.1);
    .time-table-content {
        width: 95%;
    }
}
/* End time table */

